# DB25-Semantic-Analyzer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: DESIGN.md  STORAGE_ENGINE_FEASIBILITY.md
include/db25/semantic/: analyzer.hpp  ast_helpers.hpp  catalog.hpp  diagnostic.hpp  scope.hpp
src/: analyzer.cpp
tests/: test_analyzer.cpp
